syntax = "proto3";

package peekaboo.v1.services;

option go_package = "github.com/peekaboo-labs/peekaboo/pkg/pb/v1/services;services";

import "pb/v1/resources/filesystem.proto";
import "pb/v1/resources/group.proto";
import "pb/v1/resources/system.proto";
import "pb/v1/resources/user.proto";

service SystemService {
  rpc GetSystem(GetSystemRequest) returns (resources.System);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc ListGroups(ListGroupsRequest) returns (ListGroupsResponse);
  rpc ListFilesystems(ListFilesystemsRequest) returns (ListFilesystemsResponse);
}

message GetSystemRequest {}

message ListUsersRequest {}

message ListUsersResponse {
  string Hostname = 1;
  repeated resources.User users = 2;
}

message ListGroupsRequest {}

message ListGroupsResponse {
  string Hostname = 1;
  repeated resources.Group groups = 2;
}

message ListFilesystemsRequest {}

message ListFilesystemsResponse {
  string Hostname = 1;
  repeated resources.Filesystem filesystems = 2;
}
